<resources>
    <string name="app_name">디미시트</string>

    <string name="id">아이디</string>
    <string name="password">비밀번호</string>
    <string name="login">로그인</string>
    <string name="login_description">인원체크 스프레드시트의 모바일 입력기,\n디미고인 아이디로 로그인 하세요.</string>
    <string name="check_id_pw">아이디나 비밀번호를 확인해주세요.</string>
    <string name="check_internet">인터넷 연결을 확인해주세요.</string>
    <string name="server_error">서버 사용량이 너무 많습니다.\n잠시 기다려주세요.</string>
    <string name="progress_login">로그인 중입니다</string>
    <string name="login_failed">로그인에 실패했습니다.</string>
    <string name="welcome">%s님, 환영합니다.</string>
    <string name="welcome_teacher">%s 선생님, 환영합니다.</string>
    <string name="loading_failed">로딩중 오류가 발생했습니다.</string>
    <string name="names_not_found">스프레드시트에서 학급의 명단을 찾을 수 없습니다.</string>

    <string name="go_to_sheet"><u>스프레드시트 보기</u></string>
    <string name="grade">학년</string>
    <string name="class_">반</string>
    <string name="name">이름</string>
    <string name="type">입력될 칸</string>
    <string name="reason">사유</string>
    <string name="enter_description">%d학년 %d반 스프레드시트에 입력됩니다.</string>
    <string name="enter">입력하기</string>
    <string name="enter_failed">인터넷 연결을 확인해주세요.</string>
    <string name="enter_reason">사유를 입력해주세요.</string>
    <string name="name_exist">동일한 이름이 이미 존재합니다.</string>

    <string name="delete_title">%s 삭제하시겠습니까?</string>
    <string name="cancel">취소</string>
    <string name="delete">삭제</string>
    <string name="delete_succeeded">삭제되었습니다.</string>
    <string name="delete_failed">실패했습니다. 잡시 후 다시 시도해주세요.</string>

    <string name="app_closed">앱이 점검중입니다.</string>
    <string name="update_app">앱을 업데이트해주세요.</string>
    <string name="update">업데이트하기</string>
    <string name="store_not_found">스토어에서 앱을 찾을 수 없습니다.</string>

    <string name="current_time">지금은 %s입니다.</string>
    <string name="total">총원 :" "</string>
    <string name="vacancy">결원 :" "</string>
    <string name="current">현원 :" "</string>
    <string name="totalNoColon">총원</string>
    <string name="vacancyNoColon">결원</string>
    <string name="currentNoColon">현원</string>
    <string name="ingang1">인강실 (1)</string>
    <string name="ingang2">인강실 (2)</string>
    <string name="club">동아리</string>
    <string name="etc">기타</string>
    <string name="bathroom">화장실</string>

    <string name="loginRequired">엡에서 로그인을 해주세요.</string>
    <string name="teacher_cannot_use">선생님은 사용하실 수 없습니다.</string>
    <string name="error_occurred">오류가 발생했습니다. 다시 시도해주세요.</string>
    <string name="ok">확인</string>

    <string name="summary">요약</string>

    <string-array name="types">
        <item>@string/ingang1</item>
        <item>@string/ingang2</item>
        <item>@string/club</item>
        <item>@string/etc</item>
        <item>"  "└ 금요귀가</item>
        <item>"  "└ 안정실</item>
        <item>"  "└ 빨레</item>
        <item>"  "└ 지연등교</item>
        <item>"  "└ 멘토링</item>
        <item>"  "└ IT 프로젝트실</item>
        <item>"  "└ 대회 준비</item>
        <item>@string/bathroom</item>
    </string-array>

    <string name="preference_app_setting">app_setting</string>
</resources>
