<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:animateLayoutChanges="true"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    android:paddingBottom="16dp"
    app:behavior_peekHeight="24dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:src="@drawable/ic_baseline_drag_handle_24px"
        tools:ignore="ContentDescription" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textColor="@color/colorPrimary" />

    <Spinner
        android:id="@+id/nameSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/type"
        android:textColor="@color/colorPrimary" />

    <Spinner
        android:id="@+id/typeSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:entries="@array/types" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/reasonInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:visibility="gone">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/reasonInputET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/reason"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/enterDescriptionTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:text="@string/enter_description"
        android:textColor="@color/gray" />

    <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
        android:id="@+id/enterButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/enter"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:finalCornerAngle="50dp"
        app:initialCornerAngle="50dp"
        app:spinning_bar_color="@android:color/white"
        app:spinning_bar_padding="4dp"
        app:spinning_bar_width="3dp" />
</LinearLayout>