<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".activities.MainActivity">

    <TextView
        android:id="@+id/welcomeTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/welcome"
        android:textColor="@color/transparentWhite"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/nameTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="bold" />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/gradeInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@android:color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/gradeInputET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/grade"
            android:inputType="text"
            android:textColor="@android:color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/classInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColorHint="@android:color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/classInputET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/class_"
            android:inputType="text"
            android:textColor="@android:color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColorHint="@android:color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameInputET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="text"
            android:textColor="@android:color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <Spinner
        android:id="@+id/typeSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:entries="@array/types"
        tools:layout_editor_absoluteX="16dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/reasonInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColorHint="@android:color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/reasonInputET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/reason"
            android:inputType="text"
            android:textColor="@android:color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
        android:id="@+id/enterButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@android:color/white"
        android:text="@string/enter"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        app:finalCornerAngle="50dp"
        app:initialCornerAngle="50dp"
        app:spinning_bar_color="@color/colorPrimaryDark"
        app:spinning_bar_padding="4dp" />

    <TextView
        android:id="@+id/goToSheetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:text="@string/go_to_sheet"
        android:textColor="@android:color/white" />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" />
</LinearLayout>